--- a/css/styles.css
+++ b/css/styles.css
@@ -60,23 +60,48 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, li {
     padding: 24px 0;
     margin-right: 76px;}
 
+
 .nav-list {
     display: flex;
     align-items: center;
     gap: 40px;}
    
 .nav-link {
+    position: relative;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     display: block;
-    padding: 24px 0;}
+    padding: 24px 0;
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1); }
+    
+    
+
+.nav-link::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0px;
+    bottom: -1px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    opacity: 0;
+    transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+.nav-link:hover::after,
+.nav-link:focus::after,
+.nav-link.current::after {
+    opacity: 1;
+    
+}
 
 .nav-link:hover,
 .nav-link:focus,
 .contacts-link:hover,
-.contacts-link:focus {
+.contacts-link:focus 
+.nav-link.current{
     color: #404bbf;}
 
 .contacts {
@@ -93,7 +118,8 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, li {
     letter-spacing: 0.02em;
     color: #434455;
     display: block;
-    padding: 24px; 0;}
+    padding: 24px; 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 /* Header end */
 
