--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,11 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, li {
 /* Hero-baner start */
 .hero-baner {
     background-color: #2e2f42;
-    padding: 188px 0 ;}
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    padding: 188px 0 ;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;}
     
 .hero-baner-title{
     font-weight: 700;
