--- a/css/styles.css
+++ b/css/styles.css
@@ -192,6 +192,18 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, li {
     display: flex;
     gap: 24px;} 
 
+.advantages-item-svg {
+    width: 264px;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    background-color: #f4f4fd;
+    padding: 24px 100px;}
+    
+
+.advantages-item-svg .icon {
+    
+    
+}
 .advantages-item {
     width: calc((100% - 72px) / 4);}
 
