--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,11 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, li {
     gap: 24px;} 
 
 .advantages-item-svg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 264px;
+    height: 112px;
     border: 1px solid #8e8f99;
     border-radius: 4px;
     background-color: #f4f4fd;
@@ -202,9 +206,9 @@ margin-bottom: 8px;}
     
 
 .advantages-item-svg .icon {
-    
-    
-}
+    width: 64px;
+    height: 64px;}
+
 .advantages-item {
     width: calc((100% - 72px) / 4);}
 
