--- a/css/styles.css
+++ b/css/styles.css
@@ -270,7 +270,31 @@ margin-bottom: 8px;}
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-align: center;} 
+    text-align: center;}
+    
+    .team-social-list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+        padding: 12px;
+    }
+    .social-link-item {
+        width: 40px;
+        height: 40px;
+        background-color: #4d5ae5;
+        border-radius: 50%;
+        position: relative;}
+        
+    .social-link {
+
+    }
+    .social-icon {
+        position: absolute;
+        top: 12px;
+        left: 12px;
+        fill: #fff;
+    }
 
  /* Team end */
 
