--- a/css/styles.css
+++ b/css/styles.css
@@ -335,8 +335,8 @@ margin-bottom: 8px;}
 .portfolio-items {
     width: calc((100% - 48px)/3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    position: relative;
-    overflow: hidden;
+    /* position: relative;
+    overflow: hidden; */
 }
     
 
@@ -353,6 +353,8 @@ margin-bottom: 8px;}
     }
 
 .overlay {
+    position: relative;
+    overflow: hidden;
     /* background-color: #4d5ae5;
     position: absolute;
     top: 0;
@@ -373,14 +375,14 @@ margin-bottom: 8px;}
         top: 0;
         background-color: #4d5ae5;
         position: absolute;
-        transform: translateY(100%);
+        transform: translateY(0);
         transition: transform 250ms cubic-bezier(0.4, 0,0.2, 1);
         width: 100%;
         height: 100%;
 
 }
 
-.portfolio-items:hover .overlay {
+.portfolio-items:hover {
     transform: translateY(0);
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
