--- a/css/styles.css
+++ b/css/styles.css
@@ -375,7 +375,7 @@ margin-bottom: 8px;}
         top: 0;
         background-color: #4d5ae5;
         position: absolute;
-        transform: translateY(0);
+        transform: translateY(100%);
         transition: transform 250ms cubic-bezier(0.4, 0,0.2, 1);
         width: 100%;
         height: 100%;
