--- a/css/styles.css
+++ b/css/styles.css
@@ -334,10 +334,7 @@ margin-bottom: 8px;}
 
 .portfolio-items {
     width: calc((100% - 48px)/3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /* position: relative;
-    overflow: hidden; */
-}
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);}
     
 
 .portfolio-items-text {
@@ -348,23 +345,11 @@ margin-bottom: 8px;}
     padding: 32px 16px;}
 
 .portfolio-img {
-    /* 
-     */
     }
 
 .overlay {
     position: relative;
-    overflow: hidden;
-    /* background-color: #4d5ae5;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-
-}
+    overflow: hidden;}
 
 .overlay-text {
         font-size: 16px;
@@ -378,12 +363,10 @@ margin-bottom: 8px;}
         transform: translateY(100%);
         transition: transform 250ms cubic-bezier(0.4, 0,0.2, 1);
         width: 100%;
-        height: 100%;
+        height: 100%;}
 
-}
-
-.portfolio-items:hover {
-    transform: translateY(0);
+.portfolio-items:hover .overlay-text {
+    transform: translateY(0%);
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
