--- a/css/styles.css
+++ b/css/styles.css
@@ -394,9 +394,13 @@ margin-bottom: 8px;}
     padding: 100px 0;
     background-color: #2e2f42;}
 
-    .footer-conteiner {
-        display: flex;
+.footer-conteiner {
+     display: flex;
+     align-items: baseline;
     }
+.footer-conteiner-logo {
+    margin-right: 120px;
+}
 
 .footer .logo-part {
     color: #f4f4fd;}
@@ -405,8 +409,7 @@ margin-bottom: 8px;}
     display: flex;
     flex-direction: column;} */
 .footer-social-container {
-    margin-left: 120px;
-   
+
 }
 
 .footer-text {
