--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, li {
     letter-spacing: 0.02em;
     color: #434455;
     display: block;
-    padding: 24px; 0;
+    padding: 24px 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 /* Header end */
@@ -394,23 +394,17 @@ margin-bottom: 8px;}
     padding: 100px 0;
     background-color: #2e2f42;}
 
-.footer-conteiner {
+.footer-container {
      display: flex;
-     align-items: baseline;
-    }
-.footer-conteiner-logo {
-    margin-right: 120px;
-}
+     align-items: baseline;}
+
+.footer-container-logo {
+    margin-right: 120px;}
 
 .footer .logo-part {
     color: #f4f4fd;}
 
-/* .footer-style {
-    display: flex;
-    flex-direction: column;} */
-.footer-social-container {
-
-}
+.footer-social-container {}
 
 .footer-text {
     font-size: 16px;
@@ -424,28 +418,25 @@ margin-bottom: 8px;}
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        color: #fff;
-        padding-bottom: 16px;
+        color: #ffffff;
+        padding-bottom: 16px;}
 
-}
 .footer-social-list {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+    gap: 16px;}
 
-}
 .footer-social-list .social-link-item .social-link:hover,
 .footer-social-list .social-link-item .social-link:focus
  {
-    background-color: #31d0aa;;
-}
+    background-color: #31d0aa;}
+
 .footer-logo {
     display: inline-block;
     margin-bottom: 16px;}
 
 .social-icon-footer {
-    fill: #fff;
-}
+    fill: #f4f4fd;}
  
  /* Footer end */
