--- a/css/styles.css
+++ b/css/styles.css
@@ -419,7 +419,7 @@ margin-bottom: 8px;}
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #ffffff;
-        padding-bottom: 16px;}
+        margin-bottom: 16px;}
 
 .footer-social-list {
     display: flex;
