--- a/css/styles.css
+++ b/css/styles.css
@@ -249,7 +249,7 @@ margin-bottom: 8px;}
     display: flex;
     gap: 24px;
     width: calc((100% - 72) / 4);
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);}
+    }
 
 .team-items {
     background-color: #ffffff;
